<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent" android:padding="20dip">
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/tname" android:textStyle="bold" android:textColor="#000" />
		<EditText android:id="@+id/MturnpName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text"  />
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/tlat" android:textStyle="bold" android:textColor="#000" />
		<TextView android:id="@+id/MturnpLat" android:layout_width="fill_parent"	android:layout_height="wrap_content" android:inputType="numberSigned|numberDecimal"  />
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/tlon" android:textStyle="bold" android:textColor="#000" />
		<TextView android:id="@+id/MturnpLon" android:layout_width="fill_parent"	android:layout_height="wrap_content" android:inputType="numberSigned|numberDecimal"  />
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/talt" android:textStyle="bold" android:textColor="#000" />
		<EditText android:id="@+id/MturnpAlt" android:layout_width="fill_parent"	android:layout_height="wrap_content" android:inputType="numberSigned|numberDecimal"  />
	</LinearLayout>
</ScrollView>