<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent" android:padding="20dip">
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/tcyl" android:textStyle="bold" android:textColor="#000" />
		<EditText android:id="@+id/task_cyl" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="numberSigned|numberDecimal" />
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/ttyp" android:textStyle="bold" android:textColor="#000" />
		<Spinner
        android:id="@+id/task_typ"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/taskpointtype_arrays"
        android:prompt="@string/taskpointtype"/>		
	</LinearLayout>
</ScrollView>